# foss-for-enterprise

./: .gitignore  DESCRIPTION  README.md  _quarto.yml  index.html  index.qmd  llms-full.txt  llms.txt  meta-tags.html  pyproject.toml  robots.txt  sitemap.xml
.claude/: settings.local.json
.github/workflows/: build-presentation.yaml
.well-known/: llms-full.txt  llms.txt
