[project]
name = "foss-for-enterprise"
version = "1.0.0"
description = "Understanding Free and Open Source Software for enterprise: licenses, risks, and automated tools for managing open source dependencies"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "CC0 1.0 Universal" }
authors = [
    { name = "Indrajeet Patil", email = "patilindrajeet.science@gmail.com" }
]
keywords = [
    "FOSS",
    "open-source",
    "enterprise",
    "software-licensing",
    "security"
]
dependencies = ["jupyter>=1.0.0", "ipykernel>=6.29.0", "matplotlib>=3.8.0"]

[tool.uv]
required-version = ">=0.9.15"

[dependency-groups]
dev = []
