[project]
name = "foss-for-enterprise"
version = "1.0.0"
description = "Understanding Free and Open Source Software for enterprise: licenses, risks, and automated tools for managing open source dependencies"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "CC0 1.0 Universal" }
authors = [
    { name = "Indrajeet Patil", email = "patilindrajeet.science@gmail.com" }
]
keywords = [
    "FOSS",
    "open-source",
    "enterprise",
    "software-licensing",
    "security"
]
dependencies = ["jupyter>=1.1.1", "ipykernel>=7.2.0", "matplotlib>=3.10.8"]

[tool.uv]
required-version = ">=0.11.7"

[dependency-groups]
dev = []
